tests/invalid/simple/VarDecl_Invalid_2.whiley
define int where $ >= 0 as vcf2nat

void System::main([string] args):
    vcf2nat x = -1
